[package]
name = "stable-id-traits"
version = "0.1.1"
edition = "2021"
license = "MIT / Apache-2.0"
homepage = "https://github.com/achankf/stable-id"
description = "This crate contains all traits that are required for the stable-id crate."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
